// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`homeToMarkdown > serialises EN home page (snapshot) 1`] = `
"# Demo Author

\`AI Product Engineer · auditable workflows · full-stack TypeScript + Python\`

I build AI systems where automation stays reviewable — internal tools, agent workflows, and operational dashboards that make every model action explicit.

**Location:** Remote · UTC flexible  
**Hours:** EU / US overlap  
**Availability:** Demo content

| | |
|---|---|
| Public demo content | |
| Engine source ready for audit | |
| Private portfolio content deployed separately | |

---

## About

> This public repository ships the engine, not the private portfolio data.

The committed content is fictional demo copy designed to exercise the same layouts, text mirrors, navigation states, and telemetry events as the live site.

The private build can drop in a mirrored content tree without touching components, routing, styles, analytics, or the static mirror generator.

That split keeps the open-source artifact useful while preventing client names, screenshots, contact details, and project-specific claims from leaking into Git history.

### What this repo demonstrates

- Typed bilingual content without a runtime i18n dependency
- Case-study pages that render from a structured schema
- Build-time text mirrors for agents and reviewers
- Privacy-first telemetry with a same-origin ingest endpoint
- Token-first CSS with no UI framework

### Public/private split

- Public content is committed under src/content/public
- Private content lives in src/content/.private and is ignored by git
- A generated active barrel selects private content when it exists
- CI guards block private files and media from public pushes

---

## Stack

Generic stack labels used by the public demo content. Private builds can replace the copy without changing the UI.

**AI & Agents.** Tool contracts · LLM orchestration · Human review · Audit trails · Cost tracking · RAG

**Backend.** Python · FastAPI · Django · Celery · PostgreSQL · Redis · Pydantic · SQLAlchemy

**Frontend.** React · TypeScript · Vite · React Router · Zustand · CodeMirror · Remotion

**Telemetry.** sendBeacon · SQLite WAL · Daily rollups · Basic Auth · Retention windows

**Design.** CSS tokens · OKLCH · Grid systems · View transitions · Reduced motion

**Automation.** Node scripts · GitHub Actions · Static generation · Text mirrors

**Media.** ffmpeg · Canvas · Image optimization · Lite embeds · SVG placeholders

**Ops.** Docker · Caddy · systemd · Backups · Log rotation

**Workflow.** Specs first · Small PRs · CI guards · Reviewable diffs · Runbooks

---

## Cases

### 01 — AI CRM · Demo lead desk

\`01 · ai-crm · Demo\`

Fictional operator desk where an AI assistant drafts lead summaries, suggests next actions, and waits for human approval before touching customer state.

**Scope:** Demo · 6 weeks equivalent  
**Proof:** Placeholder media · public schema  
**Surface:** Public demo content  
**Stack:** FastAPI · React · PostgreSQL · Redis · LLM tools

Read full case study → https://ilyadev.xyz/cases/ai-crm.txt

### 02 — AI Warehouse · Demo stock ops

\`02 · ai-warehouse · Demo\`

Fictional inventory assistant that turns receipt photos and operator notes into reviewable stock operations with weighted-cost math and rollback records.

**Scope:** Demo · 5 weeks equivalent  
**Proof:** Placeholder media · public schema  
**Surface:** Public demo content  
**Stack:** FastAPI · React · PostgreSQL · OCR · worker queue

Read full case study → https://ilyadev.xyz/cases/ai-warehouse.txt

### 03 — AI Video Editor · Demo timeline

\`03 · ai-video-editor · Demo\`

Fictional media workspace where prompts generate timeline edits as diffable changesets instead of mutating the project directly.

**Scope:** Demo · R&D prototype  
**Proof:** Placeholder media · public schema  
**Surface:** Public demo content  
**Stack:** React · Remotion · worker queue · local media tools

Read full case study → https://ilyadev.xyz/cases/ai-video-editor.txt

### 04 — Roblox Arena · Demo runtime

\`04 · roblox-game · Demo\`

Fictional multiplayer arena slice focused on deterministic combat rules, server authority, and tool-assisted content balancing.

**Scope:** Demo · gameplay systems  
**Proof:** Placeholder media · public schema  
**Surface:** Public demo content  
**Stack:** Luau · Roblox services · data tables · analytics events

Read full case study → https://ilyadev.xyz/cases/roblox-game.txt

### 05 — macOS Network Guard · Demo client

\`05 · macos-vpn · Demo\`

Fictional macOS menu-bar client that models per-app network policy, connection state, and kill-switch behavior without shipping private infrastructure details.

**Scope:** Demo · desktop systems  
**Proof:** Placeholder media · public schema  
**Surface:** Public demo content  
**Stack:** SwiftUI · NetworkExtension concepts · signed helper model

Read full case study → https://ilyadev.xyz/cases/macos-vpn.txt

### 06 — Portfolio Engine · Public repo case

\`06 · portfolio-site · Open engine\`

The real architecture case for this repository: typed bilingual content, route-aware case pages, text mirrors for agents, and privacy-first analytics.

**Scope:** Production engine · public demo content  
**Proof:** GitHub-ready codebase  
**Surface:** Live deployment uses private content  
**Stack:** React · TypeScript · Vite · CSS tokens · Node analytics

Read full case study → https://ilyadev.xyz/cases/portfolio-site.txt

---

## Timeline

### 2026 — now — Public portfolio engine

\`Open source demo\`

A sanitized version of a production portfolio system: typed bilingual content, static text mirrors, custom design tokens, route-aware case pages, and privacy-first telemetry.

### 2025 — 2026 — AI workflow prototypes

\`Demo track\`

Fictionalized operational tools showing human-reviewed AI actions, durable audit logs, and backend-owned permission boundaries.

### 2024 — 2025 — Internal tools architecture

\`Systems\`

Example admin surfaces, ingestion queues, structured reports, and incident-safe rollback paths used to exercise the case-study layout.

### 2023 — 2024 — Full-stack product systems

\`Foundation\`

Generic product engineering background: backend APIs, frontend workflows, worker queues, deployment scripts, and operator-facing UX.

---

## Contact

> Fork the engine or inspect the architecture.

Public demo contact data. Private builds replace this block from ignored content.

- **Email** — hello@example.com
- **Telegram** — @username
- **GitHub** — ilyaDev-xyz/portfolio

---

Source: https://ilyadev.xyz/ (HTML)
Index: https://ilyadev.xyz/llms.txt — case-study list for agents
"
`;

exports[`homeToMarkdown > serialises RU home page (snapshot) 1`] = `
"# Demo Author

\`AI Product Engineer · проверяемые workflow · full-stack TypeScript + Python\`

Строю AI-системы, где автоматизация остаётся проверяемой — внутренние инструменты, agent workflows и operational dashboards с явной границей каждого действия модели.

**Локация:** Remote · гибкий UTC  
**Часы:** EU / US overlap  
**Статус:** Demo content

| | |
|---|---|
| Публичный demo content | |
| Движок открыт для аудита | |
| Приватный контент деплоится отдельно | |

---

## About

> Публичный репозиторий отдаёт движок, а не приватные данные портфолио.

Закоммиченный контент — вымышленный demo-copy, который нагружает те же layouts, text mirrors, состояния навигации и telemetry events, что и live-сайт.

Приватная сборка подставляет зеркальное content-дерево без правок компонентов, роутинга, стилей, аналитики и генератора text mirrors.

Так open-source артефакт остаётся полезным, но client names, screenshots, контакты и проектные claims не утекают в Git history.

### Что показывает репо

- Типизированный bilingual content без runtime i18n dependency
- Case-study страницы из structured schema
- Build-time text mirrors для агентов и ревьюеров
- Privacy-first telemetry через same-origin endpoint
- Token-first CSS без UI framework

### Public/private split

- Public content закоммичен в src/content/public
- Private content лежит в src/content/.private и игнорится git
- Generated active barrel выбирает private content если он есть
- CI guards блокируют private files и media в public push

---

## Stack

Общие stack labels для публичного demo content. Private build может заменить copy без изменений UI.

**AI & Agents.** Tool contracts · LLM orchestration · Human review · Audit trails · Cost tracking · RAG

**Backend.** Python · FastAPI · Django · Celery · PostgreSQL · Redis · Pydantic · SQLAlchemy

**Frontend.** React · TypeScript · Vite · React Router · Zustand · CodeMirror · Remotion

**Telemetry.** sendBeacon · SQLite WAL · Daily rollups · Basic Auth · Retention windows

**Design.** CSS tokens · OKLCH · Grid systems · View transitions · Reduced motion

**Automation.** Node scripts · GitHub Actions · Static generation · Text mirrors

**Media.** ffmpeg · Canvas · Image optimization · Lite embeds · SVG placeholders

**Ops.** Docker · Caddy · systemd · Backups · Log rotation

**Workflow.** Specs first · Small PRs · CI guards · Reviewable diffs · Runbooks

---

## Cases

### 01 — AI CRM · Demo lead desk

\`01 · ai-crm · Demo\`

Вымышленный operator desk: AI черновит summary, предлагает next action и ждёт подтверждения человека перед изменением customer state.

**Scope:** Demo · эквивалент 6 недель  
**Proof:** Placeholder media · public schema  
**Surface:** Public demo content  
**Stack:** FastAPI · React · PostgreSQL · Redis · LLM tools

Read full case study → https://ilyadev.xyz/cases/ai-crm.ru.txt

### 02 — AI Warehouse · Demo stock ops

\`02 · ai-warehouse · Demo\`

Вымышленный inventory assistant превращает receipt photos и operator notes в reviewable stock operations с weighted-cost math и rollback records.

**Scope:** Demo · эквивалент 5 недель  
**Proof:** Placeholder media · public schema  
**Surface:** Public demo content  
**Stack:** FastAPI · React · PostgreSQL · OCR · worker queue

Read full case study → https://ilyadev.xyz/cases/ai-warehouse.ru.txt

### 03 — AI Video Editor · Demo timeline

\`03 · ai-video-editor · Demo\`

Вымышленный media workspace, где prompts создают timeline edits как diffable changesets, а не мутируют project напрямую.

**Scope:** Demo · R&D prototype  
**Proof:** Placeholder media · public schema  
**Surface:** Public demo content  
**Stack:** React · Remotion · worker queue · local media tools

Read full case study → https://ilyadev.xyz/cases/ai-video-editor.ru.txt

### 04 — Roblox Arena · Demo runtime

\`04 · roblox-game · Demo\`

Вымышленный multiplayer arena slice: deterministic combat rules, server authority и tool-assisted content balancing.

**Scope:** Demo · gameplay systems  
**Proof:** Placeholder media · public schema  
**Surface:** Public demo content  
**Stack:** Luau · Roblox services · data tables · analytics events

Read full case study → https://ilyadev.xyz/cases/roblox-game.ru.txt

### 05 — macOS Network Guard · Demo client

\`05 · macos-vpn · Demo\`

Вымышленный macOS menu-bar client: per-app network policy, connection state и kill-switch behavior без private infrastructure details.

**Scope:** Demo · desktop systems  
**Proof:** Placeholder media · public schema  
**Surface:** Public demo content  
**Stack:** SwiftUI · NetworkExtension concepts · signed helper model

Read full case study → https://ilyadev.xyz/cases/macos-vpn.ru.txt

### 06 — Portfolio Engine · Public repo case

\`06 · portfolio-site · Open engine\`

Реальный architecture case для этого repo: typed bilingual content, route-aware case pages, text mirrors for agents и privacy-first analytics.

**Scope:** Production engine · public demo content  
**Proof:** GitHub-ready codebase  
**Surface:** Live deployment uses private content  
**Stack:** React · TypeScript · Vite · CSS tokens · Node analytics

Read full case study → https://ilyadev.xyz/cases/portfolio-site.ru.txt

---

## Timeline

### 2026 — сейчас — Public portfolio engine

\`Open source demo\`

Sanitized версия production portfolio system: typed bilingual content, static text mirrors, custom design tokens, route-aware case pages и privacy-first telemetry.

### 2025 — 2026 — AI workflow prototypes

\`Demo track\`

Вымышленные operational tools показывают human-reviewed AI actions, durable audit logs и backend-owned permission boundaries.

### 2024 — 2025 — Internal tools architecture

\`Systems\`

Example admin surfaces, ingestion queues, structured reports и rollback paths, которые нагружают layout кейсов.

### 2023 — 2024 — Full-stack product systems

\`Foundation\`

Generic product engineering background: backend APIs, frontend workflows, worker queues, deployment scripts и operator-facing UX.

---

## Contact

> Можно форкнуть движок или изучить архитектуру.

Публичные demo contacts. Private build заменяет этот блок из ignored content.

- **Email** — hello@example.com
- **Telegram** — @username
- **GitHub** — ilyaDev-xyz/portfolio

---

Source: https://ilyadev.xyz/ (HTML)
Index: https://ilyadev.xyz/llms-ru.txt — case-study list for agents
"
`;
